<resources>
    <string name="app_name">BottomNavigation</string>
    <string name="str_item_1">Recents</string>
    <string name="str_item_2">Favorites</string>
    <string name="str_item_3">Nearby</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="str_fragment_1">Fragment 1</string>
    <string name="str_fragment_2">Android</string>
    <string name="str_fragment_3">Fragment 3</string>
    <string name="strg_1">Mis Correos</string>
    <string name="strg_2">Sábado</string>
    <string name="strg_3">29 Agosto 2017</string>
    <string name="str_4">Mis Compras</string>
    <string name="str_5">Llamadas</string>
    <string name="str_6">6</string>
    <string name="str_7">Messages</string>
    <string name="str_8">48</string>
    <string name="str_9">Notifications</string>
    <string name="str_10">Favoritos</string>
    <string name="str_12">Android Studio</string>
    <string name="strg_4">Mis Compras</string>
</resources>
